[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/new_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/bg-space.png" type="Texture" id=3]
[ext_resource path="res://Scenes/RocketPickup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/GameControl.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "BlinkScreen"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.101, 0.102, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.258824 ), Color( 1, 1, 1, 0.258824 ), Color( 1, 1, 1, 0.258824 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ParallaxBackground/ParallaxLayer/bg-space:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.470588 ), Color( 1, 1, 1, 0.27451 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CanvasModulate" type="CanvasModulate"]

[node name="Main" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="Main"]
wait_time = 0.4
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="Main"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Main/ParallaxBackground"]
motion_mirroring = Vector2( 617, 0 )

[node name="bg-space" type="Sprite" parent="Main/ParallaxBackground/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 156.378, 64.2227 )
scale = Vector2( 1.42751, 1.42303 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 432, 240 )

[node name="Player" parent="Main" groups=[
"Player",
] instance=ExtResource( 1 )]
position = Vector2( 100.617, 49.9063 )
run_speed = 100

[node name="TileMap" type="TileMap" parent="Main"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 9, 0, 0, 10, 0, 0, 11, 0, 0, 262107, 0, 0, 262108, 0, 0, 262109, 0, 0, 262110, 0, 0, 262111, 0, 0, 262112, 0, 0, 262113, 0, 0, 262114, 0, 0, 262115, 0, 0, 262116, 0, 0, 262117, 0, 0, 262118, 0, 0, 262119, 0, 0, 262120, 0, 0, 262121, 0, 0, 262122, 0, 0, 262123, 0, 0, 262124, 0, 0, 262125, 0, 0, 262126, 0, 0, 262127, 0, 0, 262128, 0, 0, 262129, 0, 0, 262130, 0, 0, 262131, 0, 0, 262132, 0, 0, 262133, 0, 0, 262134, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main"]
anims/BlinkScreen = SubResource( 1 )

[node name="RocketPickup" parent="Main" instance=ExtResource( 4 )]
position = Vector2( 124.828, 37.013 )
[connection signal="timeout" from="Main/Timer" to="Main" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Main/AnimationPlayer" to="Main" method="_on_AnimationPlayer_animation_finished"]
[connection signal="PlayerPicked" from="Main/RocketPickup" to="Main" method="_on_RocketPickup_PlayerPicked"]
